Update added review endpoint, update tests, added mock mongodb server
